--- a/Obfuscating Points.ipynb
+++ b/Obfuscating Points.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 483,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
     "    x = w * cos(t)\n",
     "    y = w * sin(t)\n",
     "\n",
-    "    new_x = x / cos(math.radians(lat))\n",
+    "    new_x = x / cos(radians(lat))\n",
     "\n",
     "    foundLongitude = round(new_x + lng, roundDecimals)\n",
     "    foundLatitude = round(y + lat, roundDecimals)\n",
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 484,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,16 +103,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 489,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mean distance: 1.0020049312928487\n",
-      "Minimum distance (km): 0.006898176521833114\n",
-      "Std. Dev: 0.3550093831754282\n"
+      "mean distance: 1.0025034488683158\n",
+      "Minimum distance (km): 0.005950625713920481\n",
+      "Std. Dev: 0.3542985728973543\n"
      ]
     }
    ],
@@ -132,7 +132,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If we fuzz with a radius of 1500 meters we can expect an average distance of **1km** with a standard deviation of **354m**.\n",
+    "If we fuzz with a radius of 1500 meters we can expect an average distance of **1km** with a standard deviation of **~354m**.\n",
     "\n",
     "My next question is what is better, to fuzz once with a large radius, or to fuzz many times with a small radius? Keep in mind that as you fuzz many times you start to emulate a [random walk](https://en.wikipedia.org/wiki/Random_walk) algorithm. This is not exactly what we want as it is computationally expensive. We are after final random points, not their journeys."
    ]
@@ -146,16 +146,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 493,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mean distance: 1.081544585802957\n",
-      "Minimum distance (km): 0.015482442171751739\n",
-      "Std. Dev: 0.5645097855302083\n"
+      "mean distance: 1.0902036826233235\n",
+      "Minimum distance (km): 0.008044097713950817\n",
+      "Std. Dev: 0.5713185911711739\n"
      ]
     }
    ],
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 494,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,16 +206,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 495,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mean distance: 0.7194270446281475\n",
-      "Minimum distance (km): 0.00027887314114457526\n",
-      "Std. Dev: 0.31744579619243735\n"
+      "mean distance: 0.7204556830163453\n",
+      "Minimum distance (km): 0.0012515389226051316\n",
+      "Std. Dev: 0.31587455843953566\n"
      ]
     }
    ],
