--- a/Obfuscating Points.ipynb
+++ b/Obfuscating Points.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,16 +109,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean distance (m): 1004.0932315341156\n",
-      "Minimum distance (m): 10.07809205869212\n",
-      "\u001b[1m\u001b[92mStd. Dev (m): 354.4121067934031\u001b[0m\n"
+      "Mean distance (m): 1002.6725028001613\n",
+      "Minimum distance (m): 3.1560144168508724\n",
+      "\u001b[1m\u001b[92mStd. Dev (m): 354.2012873343758\u001b[0m\n"
      ]
     }
    ],
@@ -152,16 +152,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean distance (m): 1089.0350270391514\n",
-      "Minimum distance (m): 3.656755547527371\n",
-      "Std. Dev (m): 567.2968696504396\n"
+      "Mean distance (m): 1084.311560545138\n",
+      "Minimum distance (m): 4.313101278153594\n",
+      "Std. Dev (m): 568.2250613959924\n"
      ]
     }
    ],
@@ -367,7 +367,7 @@
     "\n",
     "plt.figure(figsize=(10,8))\n",
     "plt.hist(fuzzManyDistances, bins=100, alpha=0.5, label=\"Fuzz 300 Times\")\n",
-    "plt.hist(fuzz10TimesDistances, bins=100, alpha=0.5, label=\"Fuzz 10\")\n",
+    "plt.hist(fuzz10TimesDistances, bins=100, alpha=0.5, label=\"Fuzz 10 Times\")\n",
     "plt.hist(fuzzOneDistances, bins=100, alpha=0.9, label=\"Fuzz Once\")\n",
     "\n",
     "plt.title(\"Distance from original location by fuzzing\")\n",
